[gd_scene load_steps=7 format=3 uid="uid://dvpocbbp35hdk"]

[ext_resource type="Script" path="res://scenes/tile_ui/tile_ui.gd" id="1_yaevs"]
[ext_resource type="Script" path="res://scenes/tile_ui/tile_state_machine.gd" id="2_cbcus"]
[ext_resource type="Script" path="res://scenes/tile_ui/tile_states/tile_idle_state.gd" id="3_86ian"]
[ext_resource type="Script" path="res://scenes/tile_ui/tile_selected_state.gd" id="4_4uw4y"]
[ext_resource type="Script" path="res://scenes/tile_ui/tile_states/tile_focused_state.gd" id="4_6pney"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gmrcb"]
size = Vector2(48, 48)

[node name="TileUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1104.0
offset_bottom = -600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yaevs")

[node name="Color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ClickArea" type="Area2D" parent="."]
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
position = Vector2(24, 24)
shape = SubResource("RectangleShape2D_gmrcb")

[node name="TileStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_cbcus")
initial_state = NodePath("TileIdleState")

[node name="TileIdleState" type="Node" parent="TileStateMachine"]
script = ExtResource("3_86ian")

[node name="TileFocusedState" type="Node" parent="TileStateMachine"]
script = ExtResource("4_6pney")
state = 1

[node name="TileSelectedState" type="Node" parent="TileStateMachine"]
script = ExtResource("4_4uw4y")
state = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
